--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,28 @@
 	<head>
 		<meta charset="utf-8" />
 		%sveltekit.head%
+		<meta
+			name="description"
+			content="クイズカウンター（得点表示機）のkissQ。各種早押しクイズルールに対応、休み数管理も"
+		/>
+		<meta property="og:title" content="kissQ - クイズカウンター（得点表示機）" />
+		<meta
+			property="og:description"
+			content="クイズカウンター（得点表示機）のkissQ。各種早押しクイズルールに対応、休み数管理も"
+		/>
+		<meta property="og:image" content="https://kissge.github.io/favicon.png" />
+		<meta property="og:url" content="https://kissge.github.io/kissq/" />
+		<meta property="og:type" content="website" />
+		<meta property="og:site_name" content="kissQ" />
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:site" content="@_kidochan" />
+		<meta name="twitter:title" content="kissQ - クイズカウンター（得点表示機）" />
+		<meta
+			name="twitter:description"
+			content="クイズカウンター（得点表示機）のkissQ。各種早押しクイズルールに対応、休み数管理も"
+		/>
+		<meta name="twitter:image" content="https://kissge.github.io/favicon.png" />
+		<link rel="canonical" href="https://kissge.github.io/kissq/" />
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-JEXYPM9SY5"></script>
 		<script>
